--- a/index.html
+++ b/index.html
@@ -1,3 +1,92 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>SCHMITZ REPORT Archives &reg;2020</title>
+    <link rel="icon" type="image/gif" href="https://patrick-media.github.io/schmitzreport/cdn/logo/favicon1.png">
+  </head>
+  <body>
+    <style>
+      table.topnav {
+        border-top-style: solid;
+        border-top-width: 3px;
+        border-top-color: #2f2cab;
+        
+        border-bottom-style: solid;
+        border-bottom-width: 3px;
+        border-bottom-color: #2f2cab;
+      }
+    </style>
+    <center>
+      <font face="Verdana,Helvetica,Arial">
+        <table class="topnav">
+          <tbody>
+            <tr>
+              <td align="LEFT">
+                <br>
+                <font size="2">
+                  <a href="https://schmitzreport.ddns.net">
+                    Today's SCHMITZ REPORT
+                  </a><br>
+                  <a href="#">
+                    Schmitz's Special Reports
+                  </a>
+                  <br>
+                </font>
+                <br>
+              </td>
+              <td>
+                <center>
+                  <font size="2">
+                    <a href="/">
+                      <strong>SCHMITZREPORTarchives.ddns.net</strong>
+                    </a>
+                    <br><br>
+                    <form action="#" method="GET">
+                      <input type="text" name="searchFor">
+                      <input type="submit" value="Search Archives">
+                    </form>
+                  </font>
+                </center>
+              </td>
+              <td align="RIGHT">
+                <br>
+                <a href="#">
+                  Recent Headlines
+                </a><br>
+                <a href="#">
+                  Popular Headlines
+                </a><br>
+                <a href="#">
+                  Archive List
+                </a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <table style="margin-top:10px;margin-bottom:10px;">
+          <tbody>
+            <tr>
+              <td width="74%">
+                <font size="2">
+                  <strong>INTRODUCTION:</strong><br>
+                  &00BB; The Schmitz Report Archives is a site run by Patrick Schmitz, owner of the Schmitz Report.<br>
+                  &00BB; Upon a site update, every file is archived to their respective location, organized in the URL path as YEAR/MONTH/DAY/HH_MM[pm or am].<br>
+                  &00BB; All the special reports filed by Patrick Schmitz are archived as well.<br>
+                  &00BB; This archive project began on Wednesday, December 12, 2020.<br>
+                  <br>
+                  <strong></strong>
+                  <strong
+                </font>
+              </td>
+              <td>
+                <font size="2">
+                  
+                </font>
+              </td width="25%">
+            </tr>
+          </tbody>
+        </table>
+      </font>
+    </center>
+  </body>
 </html>
